# MMDViewer

./: .gitignore  CMakeLists.txt  build.gradle
src/main/: AndroidManifest.xml
src/main/assets/: pmxFragmentShader.fs  pmxShadowFragmentShader.fs  pmxShadowVertexShader.fs  pmxVertexShader.fs  simpleFragmentShader.fs  simpleVertexShader.fs  simpleVertexShader.vs
src/main/java/com/wjy50/app/mmdviewer/: GLActivity.java  MainActivity.java
src/main/java/com/wjy50/app/mmdviewer/gl/: MyGLSurfaceView.java
src/main/java/com/wjy50/app/mmdviewer/gl/utils/: MyRenderer.java  NativeGLInterface.java
src/main/jni/: MyNativeGLInterface.cpp  com_wjy50_app_mmdviewer_gl_utils_NativeGLInterface.h
src/main/jni/gl/: abscamera.cpp  abscamera.h  application.cpp  application.h  environment.cpp  environment.h  glworld.cpp  glworld.h  renderer.cpp  renderer.h  scenecamera.cpp  scenecamera.h  shaderloader.cpp  shaderloader.h  texture.c  texture.h
src/main/jni/gl/objects/: absglobject.h  cube.cpp  cube.h  globject.cpp  globject.h
src/main/jni/gl/texture/: texture.cpp  texture.h  texture_bmp.cpp  texture_jpeg.cpp  texture_load_exception.cpp  texture_png.cpp  texture_tga.cpp
src/main/jni/matrix/: matrix.c  matrix.h
src/main/jni/mmd/: mmdcommon.h  pmxreader.cpp  pmxreader.h
src/main/jni/mmd/pmx/: pmx_exception.cpp  pmxbone.cpp  pmxbone.h  pmxcommon.h  pmxmaterial.cpp  pmxmaterial.h  pmxmorph.cpp  pmxmorph.h  pmxobject.cpp  pmxobject.h  pmxobject_morph.cpp  pmxobject_shader.cpp  pmxobject_shader_holder.cpp  pmxobject_shader_holder.h  pmxobject_transform.cpp  pmxobject_transform_ik.cpp  pmxreader.cpp  pmxreader.h  pmxtexture.cpp  pmxtexture.h  pmxvertex.cpp  pmxvertex.h
src/main/jni/mmd/vmd/: bonekeyframe.cpp  bonekeyframe.h  camerakeyframe.cpp  camerakeyframe.h  ikkeyframe.cpp  ikkeyframe.h  lightkeyframe.cpp  lightkeyframe.h  morphkeyframe.cpp  morphkeyframe.h  vmdkeyframe.cpp  vmdkeyframe.h  vmdreader.cpp  vmdreader.h
src/main/jni/quaternion/: quaternion.c  quaternion.h
src/main/jni/utils/: UniquePointerExt.h  debugutils.h  mathutils.c  mathutils.cpp  mathutils.h  mstring.cpp  mstring.h
src/main/jni/vector/: vector.c  vector.h
src/main/res/values/: strings.xml  styles.xml
